# cabo

./: Makefile  README.md
backend/: .env.example  CLAUDE.md  IMPLEMENTATION_PLAN.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test.sh  test_drawn_card.py
backend/alembic/: env.py
backend/alembic/versions/: 1dc78e9cc593_add_game_checkpoints_for_persistence.py  25312fd1d82c_add_gameroom_table_and_update_.py  51bd7e7c9721_create_user_sessions_table.py  a06631024034_rename_state_to_phase.py  ce1ba67c9f3a_init.py  e5fce852c1cb_replace_circular_fks_with_user_to_room_.py
backend/app/: main.py
backend/app/core/: database.py
backend/app/middleware/: session.py
backend/app/models/: __init__.py  game_checkpoint.py  room.py  session.py  user_to_room.py
backend/app/routers/: game.py  session.py  ws.py
backend/services/: checkpoint_manager.py  cleanup_service.py  connection_manager.py  game_manager.py  game_orchestrator.py  game_persistence.py  message_sequencer.py  redis_game_store.py  redis_manager.py  room_manager.py  session_manager.py  stream_manager.py
backend/tests/: conftest.py  sessions.py  test_game_service.py  test_health_check.py  test_http_game_service.py  test_room_management.py
backend/tests/game_manager/: test_cabo_endgame.py  test_card_mechanics.py  test_error_conditions.py  test_game_setup.py  test_message_flow.py  test_special_effects.py  test_stack_mechanics.py  utils.py
backend/tests/session_manager/: __init__.py  test_session_manager.py
frontend/: .env.example  .env.production  .gitignore  CLAUDE.md  dist.tgz  (+4 more)
(+58 files in other folders)
